changes for kiosk mode

--- a/templates/tab-content.html
+++ b/templates/tab-content.html
@@ -49,8 +49,8 @@
     <div id='firechat-messages<%- id %>' class='chat'></div>
   </div>
 
-  <div class='clearfix'>
-    <label>Your message:</label>
+  <div id='firechat-input' class='clearfix'>f
+    <label>YASDF:</label>
     <textarea id='textarea<%- id %>' placeholder='Type your message here...'></textarea>
   </div>
 </div>
